Revert mess I made of KafkaAssemblyOperatorTest thanks to the power of Friday afternoon commits
Signed-off-by: Liam Clarke <liam@steelsky.co.nz>